# shefflied-bats

./: .gitignore  LICENSE  MLproject  README.md  config.json  environment.yml  explore.ipynb  hello.py  pyproject.toml  setup.py  structure.txt
sdm/: README.md  __init__.py  cli.py  config.py  extract.py  features.py  geo.py  maxent.py  models.py  pyproject.toml  utils.py
sdm/commands/: __init__.py
sdm/commands/data_preparation/environmental/: generate_ceh_lc_data.py  generate_terrain_data.py  generate_terrain_stats.py  generate_vom_data.py
sdm/commands/data_preparation/spatial/: create_study_boundary.py  (+2 more)
sdm/commands/modelling/: __init__.py  predict_sdm_models.py  train_sdm_models.py
sdm/commands/visualization/: visualise_model_outputs.py
sdm/data/: __init__.py  boundaries.py  ceh_processing.py  climate.py  landcover.py  os.py  sentinel.py  terrain.py
sdm/data/loaders/: __init__.py  climate.py  image.py  vector.py
sdm/data/processing/: __init__.py  core.py
sdm/data/spatial/: __init__.py  core.py
sdm/data/terrain/: __init__.py  core.py
sdm/models/core/: evaluation.py  feature_subsetter.py  features.py  prediction.py  training.py
sdm/models/maxent/: __init__.py  maxent_model.py
sdm/models/utils/: __init__.py  preprocessor.py  utils.py
sdm/occurrence/: __init__.py  cleaning.py  sampling.py  species_data.py
sdm/raster/: __init__.py  io.py  processing.py  terrain.py  utils.py
sdm/raster/utils/: __init__.py  grid.py
sdm/utils/: array_utils.py  io.py  logging_utils.py  text_utils.py
sdm/viz/: model_evaluation.py  plots.py  prediction_maps.py
(+145 files in other folders)
