[project]
name = "sheffield-bats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "elapid>=1.0.2",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "mlflow>=2.22.0",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pyhere>=1.0.3",
    "pytest>=8.3.5",
    "rasterio>=1.4.3",
    "rioxarray>=0.19.0",
    "scikit-learn>=1.5.2",
    "tqdm>=4.67.1",
    "xarray>=2025.3.1",
]

[tool.uv.workspace]
members = ["sdm"]
