[project]
name = "sdm"
version = "0.1.0"
description = "Species distribution modeling package"
requires-python = ">=3.11"
dependencies = [
    "elapid>=1.0.2",
    "geopandas>=1.0.1", 
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "rasterio>=1.4.3",
    "scikit-learn>=1.5.2",
    "tqdm>=4.67.1",
    "typer>=0.15.4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
